# tgbot

./: CMakeLists.txt
src/: engine.cpp  exit.cpp  exit.hpp  keyboard.cpp  lib.cpp  lib.hpp  lib1.cpp  lib1.hpp  lib2.cpp  lib2.hpp
